Implemented a simple API to save and receive data

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,6 @@
+spring.data.mongodb.uri=mongodb+srv://Alex_the_racer_1:AlExAnDeR2003@taxidriverdatabase.omsqkxe.mongodb.net/?retryWrites=true&w=majority
+spring.data.mongodb.auto-index-creation=true
+spring.data.mongodb.database=AustriasNextTaxiDriver
 
+springdoc.api-docs.enabled=true
+springdoc.api-docs.path=/api/docs
