--- a/build.gradle
+++ b/build.gradle
@@ -79,7 +79,7 @@ tasks.withType(JavaCompile) {
 jar {
 	manifest {
 		attributes(
-				'Main-Class': "com.alextheracer1.austriasnexttaxidriver.AustriasNextTaxiDriverWebsiteApplication.java"
+				'Main-Class': "com.alextheracer1.austriasnexttaxidriver.AustriasNextTaxiDriverWebsiteApplication",
 		)
 	}
 }
